--- a/Cultural Hub/WebApp/Views/Events/Details.cshtml
+++ b/Cultural Hub/WebApp/Views/Events/Details.cshtml
@@ -41,10 +41,10 @@
             @Html.DisplayFor(model => model.StartsAt)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Duration)
+            @Html.DisplayNameFor(model => model.EndsAt)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Duration)
+            @Html.DisplayFor(model => model.EndsAt)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Type)
