--- a/Cultural Hub/WebApp/Views/Events/EditEvent.cshtml
+++ b/Cultural Hub/WebApp/Views/Events/EditEvent.cshtml
@@ -40,9 +40,9 @@
                 <span asp-validation-for="StartsAt" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Duration" class="control-label"></label>
-                <input asp-for="Duration" class="form-control" />
-                <span asp-validation-for="Duration" class="text-danger"></span>
+                <label asp-for="EndsAt" class="control-label"></label>
+                <input asp-for="EndsAt" class="form-control" />
+                <span asp-validation-for="EndsAt" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
