--- a/Cultural Hub/WebApp/Views/Shared/_Layout.cshtml
+++ b/Cultural Hub/WebApp/Views/Shared/_Layout.cshtml
@@ -29,6 +29,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="AddEvent">Adaugare Eveniment</a>
                         </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="FavoriteEvents">Favorites</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
