--- a/Cultural Hub/WebAppClient/Views/Events/EditEvent.cshtml
+++ b/Cultural Hub/WebAppClient/Views/Events/EditEvent.cshtml
@@ -13,6 +13,7 @@
         <form asp-action="EditEvent">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @Html.HiddenFor(x => x.Id)
+            @Html.HiddenFor(x => x.ClientId)
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
